<resources>
    <string name="app_name">Snapshat Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edittext_username_hint">Username</string>
    <string name="edittext_password_hint">Enter Password</string>
    <string name="button_go_text">GO</string>
    <string name="textview_username">Username</string>
    <string name="textview_password">Password</string>
    <string name="choose_image">Choose Image</string>
    <string name="next_button">Next</string>
    <string name="snapchat_text_hint">Enter Message </string>
</resources>